# windows-clipboard-image-helper

./: .gitattributes  LICENSE  README.md  index.html  package-lock.json  package.json
src/: app.tsx  detail.tsx  index.tsx  main.tsx  settings.tsx  upload.tsx  util.ts
src-macro/: Cargo.toml
src-macro/src/: lib.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: analyzer.rs  app.rs  bundle.rs  clipboard.rs  common.rs  dal.rs  initialize.rs  main.rs  model.rs  ocr.rs  regular.rs  settings.rs
src-tauri/src/analyzer/: ocr.rs
src-tauri/src/app/: image_insert.rs  image_search.rs
src-tauri/src/client/: sqlite.rs
src-tauri/src/dal/: clean.rs  client.rs  model.rs
src-tauri/src/regular/: clean.rs  ocr.rs
