[package]
name = "windows-clipboard-image-helper"
version = "0.0.1"
description = "Windows剪切板图片工具"
authors = ["ConanYu"]
license = "MIT"
repository = "https://github.com/ConanYu/windows-clipboard-image-helper"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
tauri = { version = "*", features = ["dialog-open", "notification-all", "system-tray", "shell-open"] }
tauri-runtime = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
erased-serde = "*"
winapi = { version = "*", features = ["winuser", "windef"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
arboard = "*"
reqwest = { version = "*", features = ["stream"] }
futures-util = "*"
log = "*"
log4rs = "*"
rusqlite = { version = "*", features = ["bundled"] }
image = "*"
once_cell = "*"
chrono = "*"
base64 = "*"
sha256 = "*"
format-sql-query = "*"
color_space = "*"
bytes = "*"

[dependencies.src-macro]
path = "../src-macro"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
